# Projects

./: README.md
Bakalar/Algoritmy2015Z/Projekt 1/: Readme.txt  Zadanie.txt  c201.c  c203.c  c206.c
Bakalar/Algoritmy2015Z/Projekt 2/: Readme.txt  Zadanie.txt  c016.c  c401.c  c402.c
Bakalar/Bachelor Thesis/: Readme.txt
Bakalar/Bachelor Thesis/Dokumentácia Latex/: fitthesis.cls  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex
Bakalar/Bachelor Thesis/Dokumentácia Latex/bib-styles/: PolygonsHaveEars.bib
Bakalar/Bachelor Thesis/Unity projekt/Bachelor Thesis/: Assembly-CSharp.csproj  Bachelor Thesis.csproj  Bachelor Thesis.sln  Bachelor Thesis.userprefs  New Unity Project.CSharp.csproj  New Unity Project.csproj  New Unity Project.userprefs  Pline.cs  output_log.txt  packages.config
Bakalar/Databázové systémy2016L/: xondre08_xkeryj00.sql
Bakalar/Informační systémy2016Z/: addCompany.php  addUradnik.php  addWork.php  checkdate.php  data.sql  footer.html  header.html  index.php  init.php  login.php  logout.php  menu.php  pracPoz.php  profile.php  register.php  removeWork.php  style.css  updateUradnik.php
Bakalar/Mikroprocesorové a vestavěné systémy2016Z/Simulace v CW Světelné noviny/: C_Layout.hwl  HCS08_Full_Chip_Simulator.ini  HCS08_OpenSourceBDM.ini  Project_1.mcp  Readme.txt  Zadanie.txt
Bakalar/Mikroprocesorové a vestavěné systémy2016Z/Simulace v CW Světelné noviny/Project_1_Data/: CWSettingsWindows.stg
Bakalar/Mikroprocesorové a vestavěné systémy2016Z/Simulace v CW Světelné noviny/Sources/: LEDnoviny32cx8r.vtl  main.c
Bakalar/Návrh počítačových systémov2015L/2. projekt - Brainlove/: cpu.vhd  inp.srp  login.b
Bakalar/Návrh číslicových systémů2015Z/: fsm.vhd
Bakalar/Operační systémy2015L/proj1/: wedi
Bakalar/Počítačové komunikace a sítě2016L/Přenos souborů/: Makefile  README  test.sh
Bakalar/Počítačové komunikace a sítě2016L/Přenos souborů/another/: d.cpp  d.h
Bakalar/Počítačové komunikace a sítě2016L/Webový klient/: Makefile  webclient.cpp
Bakalar/Principy programovacích jazyků a OOP2016L/C++ Classes v Pythonu 3/: cls.py
Bakalar/Principy programovacích jazyků a OOP2016L/Zvýraznění syntaxe v PHP 5/: syn.php
Bakalar/Seminář Java2016L/xondre08/: README.txt  build.xml  manifest.mf
Bakalar/Signály a systémy2015Z/: reseni.txt
Bakalar/Signály a systémy2015Z/src/: project.m
Bakalar/Síťové aplikace a správa sítí2016Z/: Header.cpp  ISA.cpp  Makefile  Parameters.cpp  Parameters.h  Query.cpp  README  RR.cpp  Zadanie.txt  roughDNS.py
Bakalar/Síťové aplikace a správa sítí2016Z/Rdatas/: AAAARData.cpp  ARData.cpp  CNAMERData.cpp  MXRData.cpp  NSRData.cpp  RData.cpp  Rdata.h  SOARData.cpp  TXTRData.cpp
Bakalar/Síťové aplikace a správa sítí2016Z/pomocneSubory/: another.cpp  another.h
Bakalar/Síťové aplikace a správa sítí2016Z/socket/: socket.cpp  socket.h
Bakalar/Tvorba uživatelských rozhraní2016Z/: Readme.txt  Zadanie.txt
Bakalar/Tvorba uživatelských rozhraní2016Z/ITU2016/: data.sql  doc.html  footer.html  header.html  index.php  init.php  login.php  menu.php  pass.php  profile.php  review.php  style.css  table.php
Bakalar/Základy počítačové grafiky2016L/: student.c  student.h
Bakalar/Základy programování2014Z/: Projekt 1 - Zadanie.docx  Projekt 2 - Zadanie.docx  proj1- Výpočty v tabulce.c  proj2 - Iterační výpočty.c  proj3 - Průchod bludištěm.c
Magister/Bioinformatika 2019L/: resolve_overlaps.py  Řešení překryvů sekvenčních oblastí.html
Magister/Grafická uživatelská rozhraní v X Window2018Z/Projekt 1/: Readme.txt  Zadanie.txt  draw.c
Magister/Grafická uživatelská rozhraní v X Window2018Z/Projekt 2 Barevné kódy rezistorů/: Imakefile  Readme.txt  Zadanie.txt  draw.c
Magister/Grafické a multimediální procesory2018Z/Výpočet normály s vyhlazením pomocí GPU/: README
Magister/Inteligentní systémy2018Z/: README.txt  domoticz.db
Magister/Inteligentní systémy2018Z/proj/: build.xml
Magister/Multimédia2018L/: Readme.txt  Zadanie.txt
Magister/Multimédia2018L/Vizualizace zvukového signálu a jeho spektra v reálném čase/: MUL_Projekt.sln
Magister/Výpočetní geometrie 2019L/: CMakeLists.txt  VGE_projekt-xondre08.docx  presentation.pptx
Magister/Výpočetní geometrie 2019L/Triangulace polygonu/: Libraries.lib
Magister/Výpočetní geometrie 2019L/src/: Clip2TriTriangulator.cpp  Clip2TriTriangulator.hpp  EarClippingTriangulator.cpp  EarClippingTriangulator.h  GLDraw.cpp  GLDraw.hpp  Geometry.h  Handler.cpp  Handler.hpp  Poly2TriTrinagulator.cpp  Poly2TriTrinagulator.hpp  SDLWindow.cpp  SDLWindow.hpp  Stopwatch.cpp  Stopwatch.hpp  Triangulator.h  main.cpp
Magister/Webové Aplikace 2019L/: app.css  app.js  demo.html  navod.html
Magister/Zpracování řečových signálů2018L/16kbps/: out.cod  zre_code  zre_decode
Stredná škola/maturitna praca/: KOP.docx
Stredná škola/maturitna praca/HRA 1/: tvorba 3D.sln
Stredná škola/maturitna praca/hra/: IpAdress.txt  Settings1.Designer.cs  Settings1.settings  tvorba 3D.exe.config
Stredná škola/maturitna praca/server/: server.sln
(+235 files in other folders)
